# seshat

./: .gitignore  Makefile.am  README.md  SECURITY.md  configure.ac
debian/: changelog  control
doc/: Makefile.am  api.typ  contributing.typ  introduction.typ  knowledge-graph.typ  news.typ  running-seshat.typ  seshat.typ
docker/: development-build  release-build.in
helm/: Makefile.am
helm/seshat/: Chart.yaml  values.yaml
helm/seshat/templates/: cert-manager.yaml  deployment.yaml  ingress.yaml  secrets.yaml  service.yaml  volumes.yaml
rpmbuild/SPECS/: seshat.spec.in
src/: Makefile.am
src/seshat/utils/: convenience.py  rdf.py
src/seshat/web/: config.py  database.py  formatter.py  ui.py  wsgi.py
src/seshat/web/resources/html_templates/: colors.css  layout.html  portal.html
src/seshat/web/resources/html_templates/depositor/: dashboard.html  edit-dataset.html
src/seshat/web/resources/sparql_templates/: projects.sparql  statistics_authors.sparql  statistics_files.sparql  update_file.sparql  update_session.sparql
src/seshat/web/resources/static/css/: main.css
src/seshat/web/resources/static/js/: admin-dashboard.js  edit-dataset.js  edit-profile.js  exploratory.js  search.js
