AUTOMAKE_OPTIONS        = subdir-objects

PYTHON_FILES =                                                                \
    seshat/__init__.py                                                        \
    seshat/ui.py                                                              \
    seshat/utils/constants.py                                                 \
    seshat/utils/convenience.py                                               \
    seshat/utils/rdf.py                                                       \
    seshat/web/cache.py                                                       \
    seshat/web/config.py                                                      \
    seshat/web/database.py                                                    \
    seshat/web/email_handler.py                                               \
    seshat/web/formatter.py                                                   \
    seshat/web/locks.py                                                       \
    seshat/web/s3.py                                                          \
    seshat/web/ui.py                                                          \
    seshat/web/validator.py                                                   \
    seshat/web/wsgi.py                                                        \
    seshat/web/xml_formatter.py                                               \
    seshat/web/zipfly.py

EXTRA_RESOURCES =                                                             \
    seshat/web/resources/html_templates/400.html                              \
    seshat/web/resources/html_templates/403.html                              \
    seshat/web/resources/html_templates/404.html                              \
    seshat/web/resources/html_templates/410.html                              \
    seshat/web/resources/html_templates/500.html                              \
    seshat/web/resources/html_templates/502.html                              \
    seshat/web/resources/html_templates/activate_2fa_session.html             \
    seshat/web/resources/html_templates/admin/dashboard.html                  \
    seshat/web/resources/html_templates/admin/exploratory.html                \
    seshat/web/resources/html_templates/admin/quota_requests.html             \
    seshat/web/resources/html_templates/admin/reports/dashboard.html          \
    seshat/web/resources/html_templates/admin/reports/embargoed_datasets.html \
    seshat/web/resources/html_templates/admin/reports/restricted_datasets.html \
    seshat/web/resources/html_templates/admin/sparql.html                     \
    seshat/web/resources/html_templates/admin/users.html                      \
    seshat/web/resources/html_templates/author.html                           \
    seshat/web/resources/html_templates/badge.svg                             \
    seshat/web/resources/html_templates/categories.html                       \
    seshat/web/resources/html_templates/category.html                         \
    seshat/web/resources/html_templates/collection.html                       \
    seshat/web/resources/html_templates/colors.css                            \
    seshat/web/resources/html_templates/dataset_access_request.html           \
    seshat/web/resources/html_templates/dataset.html                          \
    seshat/web/resources/html_templates/depositor/dashboard.html              \
    seshat/web/resources/html_templates/depositor/edit-collection.html        \
    seshat/web/resources/html_templates/depositor/edit-dataset.html           \
    seshat/web/resources/html_templates/depositor/edit-session.html           \
    seshat/web/resources/html_templates/depositor/language-selector.html      \
    seshat/web/resources/html_templates/depositor/my-collections.html         \
    seshat/web/resources/html_templates/depositor/my-data.html                \
    seshat/web/resources/html_templates/depositor/new_private_link.html       \
    seshat/web/resources/html_templates/depositor/private-links.html          \
    seshat/web/resources/html_templates/depositor/profile.html                \
    seshat/web/resources/html_templates/depositor/published-collection.html   \
    seshat/web/resources/html_templates/depositor/submitted-for-review.html   \
    seshat/web/resources/html_templates/email/2fa_token.html                  \
    seshat/web/resources/html_templates/email/2fa_token.txt                   \
    seshat/web/resources/html_templates/email/data_access_request.html        \
    seshat/web/resources/html_templates/email/data_access_request.txt         \
    seshat/web/resources/html_templates/email/dataset_approved.html           \
    seshat/web/resources/html_templates/email/dataset_approved.txt            \
    seshat/web/resources/html_templates/email/dataset_declined.html           \
    seshat/web/resources/html_templates/email/dataset_declined.txt            \
    seshat/web/resources/html_templates/email/dataset_submitted.html          \
    seshat/web/resources/html_templates/email/dataset_submitted.txt           \
    seshat/web/resources/html_templates/email/declined_dataset_notification.html \
    seshat/web/resources/html_templates/email/declined_dataset_notification.txt \
    seshat/web/resources/html_templates/email/feedback.html                   \
    seshat/web/resources/html_templates/email/feedback.txt                    \
    seshat/web/resources/html_templates/email/layout.html                     \
    seshat/web/resources/html_templates/email/published_dataset_notification.html \
    seshat/web/resources/html_templates/email/published_dataset_notification.txt \
    seshat/web/resources/html_templates/email/quota_approved.html             \
    seshat/web/resources/html_templates/email/quota_approved.txt              \
    seshat/web/resources/html_templates/email/quota_request.html              \
    seshat/web/resources/html_templates/email/quota_request.txt               \
    seshat/web/resources/html_templates/email/submitted_for_review_notification.html \
    seshat/web/resources/html_templates/email/submitted_for_review_notification.txt \
    seshat/web/resources/html_templates/feedback.html                         \
    seshat/web/resources/html_templates/git_instructions.html                 \
    seshat/web/resources/html_templates/institutions.html                     \
    seshat/web/resources/html_templates/jsonld.html                           \
    seshat/web/resources/html_templates/layout.html                           \
    seshat/web/resources/html_templates/loader.svg                            \
    seshat/web/resources/html_templates/maintenance.html                      \
    seshat/web/resources/html_templates/portal.html                           \
    seshat/web/resources/html_templates/private_link_is_expired.html          \
    seshat/web/resources/html_templates/public_metadata.html                  \
    seshat/web/resources/html_templates/review/overview.html                  \
    seshat/web/resources/html_templates/review/published.html                 \
    seshat/web/resources/html_templates/search.html                           \
    seshat/web/resources/html_templates/sitemap_template.xml                  \
    seshat/web/resources/metadata_templates/bibtex.bib                        \
    seshat/web/resources/metadata_templates/endnote.enw                       \
    seshat/web/resources/metadata_templates/refman.ris                        \
    seshat/web/resources/languages.json                                       \
    seshat/web/resources/licenses.json                                        \
    seshat/web/resources/metadata_templates/citation.cff                      \
    seshat/web/resources/root_categories.json                                 \
    seshat/web/resources/sparql_templates/account_by_email.sparql             \
    seshat/web/resources/sparql_templates/account_by_session_token.sparql     \
    seshat/web/resources/sparql_templates/account_categories.sparql           \
    seshat/web/resources/sparql_templates/account_sessions.sparql             \
    seshat/web/resources/sparql_templates/account_storage_used.sparql         \
    seshat/web/resources/sparql_templates/account_uuid_by_orcid.sparql        \
    seshat/web/resources/sparql_templates/accounts.sparql                     \
    seshat/web/resources/sparql_templates/append_to_list.sparql               \
    seshat/web/resources/sparql_templates/associated_authors.sparql           \
    seshat/web/resources/sparql_templates/author_profile.sparql               \
    seshat/web/resources/sparql_templates/author_public_items.sparql          \
    seshat/web/resources/sparql_templates/authors.sparql                      \
    seshat/web/resources/sparql_templates/categories.sparql                   \
    seshat/web/resources/sparql_templates/categories_tree.sparql              \
    seshat/web/resources/sparql_templates/category_by_id.sparql               \
    seshat/web/resources/sparql_templates/collaborators.sparql                \
    seshat/web/resources/sparql_templates/collection_dataset_containers.sparql \
    seshat/web/resources/sparql_templates/collection_datasets.sparql          \
    seshat/web/resources/sparql_templates/collection_datasets_count.sparql    \
    seshat/web/resources/sparql_templates/collection_versions.sparql          \
    seshat/web/resources/sparql_templates/collections.sparql                  \
    seshat/web/resources/sparql_templates/collections_by_account.sparql       \
    seshat/web/resources/sparql_templates/collections_from_dataset.sparql     \
    seshat/web/resources/sparql_templates/contact_info_from_container.sparql  \
    seshat/web/resources/sparql_templates/container.sparql                    \
    seshat/web/resources/sparql_templates/container_items.sparql              \
    seshat/web/resources/sparql_templates/container_uuid_by_id.sparql         \
    seshat/web/resources/sparql_templates/custom_fields.sparql                \
    seshat/web/resources/sparql_templates/dataset_files.sparql                \
    seshat/web/resources/sparql_templates/dataset_is_under_review.sparql      \
    seshat/web/resources/sparql_templates/dataset_statistics.sparql           \
    seshat/web/resources/sparql_templates/dataset_statistics_timeline.sparql  \
    seshat/web/resources/sparql_templates/dataset_storage_used.sparql         \
    seshat/web/resources/sparql_templates/dataset_versions.sparql             \
    seshat/web/resources/sparql_templates/datasets.sparql                     \
    seshat/web/resources/sparql_templates/decline_draft_dataset.sparql        \
    seshat/web/resources/sparql_templates/delete_account_groups_associations.sparql \
    seshat/web/resources/sparql_templates/delete_account_property.sparql      \
    seshat/web/resources/sparql_templates/delete_associations.sparql          \
    seshat/web/resources/sparql_templates/delete_collaborator.sparql          \
    seshat/web/resources/sparql_templates/delete_collection_draft.sparql      \
    seshat/web/resources/sparql_templates/delete_dataset_draft.sparql         \
    seshat/web/resources/sparql_templates/delete_dataset_embargo.sparql       \
    seshat/web/resources/sparql_templates/delete_group_members.sparql         \
    seshat/web/resources/sparql_templates/delete_inactive_session_by_uuid.sparql \
    seshat/web/resources/sparql_templates/delete_inferred_groups.sparql       \
    seshat/web/resources/sparql_templates/delete_item_from_list.sparql        \
    seshat/web/resources/sparql_templates/delete_items_all_from_list.sparql   \
    seshat/web/resources/sparql_templates/delete_private_links.sparql         \
    seshat/web/resources/sparql_templates/delete_session.sparql               \
    seshat/web/resources/sparql_templates/delete_session_by_uuid.sparql       \
    seshat/web/resources/sparql_templates/delete_sessions.sparql              \
    seshat/web/resources/sparql_templates/delete_sessions_older_than.sparql   \
    seshat/web/resources/sparql_templates/derived_from.sparql                 \
    seshat/web/resources/sparql_templates/explorer_properties.sparql          \
    seshat/web/resources/sparql_templates/explorer_property_types.sparql      \
    seshat/web/resources/sparql_templates/explorer_types.sparql               \
    seshat/web/resources/sparql_templates/export_listable_type.sparql         \
    seshat/web/resources/sparql_templates/export_root_type.sparql             \
    seshat/web/resources/sparql_templates/funding.sparql                      \
    seshat/web/resources/sparql_templates/group.sparql                        \
    seshat/web/resources/sparql_templates/group_by_name.sparql                \
    seshat/web/resources/sparql_templates/item_collaborative_permissions.sparql \
    seshat/web/resources/sparql_templates/latest_datasets_portal.sparql       \
    seshat/web/resources/sparql_templates/licenses.sparql                     \
    seshat/web/resources/sparql_templates/members.sparql                      \
    seshat/web/resources/sparql_templates/missing_checksummed_files_for_container.sparql \
    seshat/web/resources/sparql_templates/missing_dois.sparql                 \
    seshat/web/resources/sparql_templates/prefixes.sparql                     \
    seshat/web/resources/sparql_templates/private_links.sparql                \
    seshat/web/resources/sparql_templates/projects.sparql                     \
    seshat/web/resources/sparql_templates/publish_draft_collection.sparql     \
    seshat/web/resources/sparql_templates/publish_draft_dataset.sparql        \
    seshat/web/resources/sparql_templates/quota_requests.sparql               \
    seshat/web/resources/sparql_templates/record_uri.sparql                   \
    seshat/web/resources/sparql_templates/references.sparql                   \
    seshat/web/resources/sparql_templates/reviews.sparql                      \
    seshat/web/resources/sparql_templates/root_categories.sparql              \
    seshat/web/resources/sparql_templates/search_tags.sparql                  \
    seshat/web/resources/sparql_templates/statistics_authors.sparql           \
    seshat/web/resources/sparql_templates/statistics_collections.sparql       \
    seshat/web/resources/sparql_templates/statistics_datalink.sparql          \
    seshat/web/resources/sparql_templates/statistics_datasets.sparql          \
    seshat/web/resources/sparql_templates/statistics_files.sparql             \
    seshat/web/resources/sparql_templates/subcategories_by_category.sparql    \
    seshat/web/resources/sparql_templates/tags.sparql                         \
    seshat/web/resources/sparql_templates/transfer_account_resources.sparql   \
    seshat/web/resources/sparql_templates/update_account.sparql               \
    seshat/web/resources/sparql_templates/update_author.sparql                \
    seshat/web/resources/sparql_templates/update_authors_order.sparql         \
    seshat/web/resources/sparql_templates/update_collaborators.sparql         \
    seshat/web/resources/sparql_templates/update_collection.sparql            \
    seshat/web/resources/sparql_templates/update_dataset.sparql               \
    seshat/web/resources/sparql_templates/update_dataset_thumb.sparql         \
    seshat/web/resources/sparql_templates/update_doi_after_publishing.sparql  \
    seshat/web/resources/sparql_templates/update_file.sparql                  \
    seshat/web/resources/sparql_templates/update_git_uuid.sparql              \
    seshat/web/resources/sparql_templates/update_orcid_for_account.sparql     \
    seshat/web/resources/sparql_templates/update_private_link.sparql          \
    seshat/web/resources/sparql_templates/update_quota_request.sparql         \
    seshat/web/resources/sparql_templates/update_review.sparql                \
    seshat/web/resources/sparql_templates/update_seen_by_reviewer.sparql      \
    seshat/web/resources/sparql_templates/update_session.sparql               \
    seshat/web/resources/sparql_templates/update_view_and_download_counts.sparql \
    seshat/web/resources/static/css/ace.css                                   \
    seshat/web/resources/static/css/dropzone.min.css                          \
    seshat/web/resources/static/css/jquery.dataTables.min.css                 \
    seshat/web/resources/static/css/form.css                                  \
    seshat/web/resources/static/css/main.css                                  \
    seshat/web/resources/static/css/pub.css                                   \
    seshat/web/resources/static/css/quill.snow.css                            \
    seshat/web/resources/static/fonts/fa-brands-400.eot                       \
    seshat/web/resources/static/fonts/fa-brands-400.ttf                       \
    seshat/web/resources/static/fonts/fa-brands-400.woff                      \
    seshat/web/resources/static/fonts/fa-brands-400.woff2                     \
    seshat/web/resources/static/fonts/fa-solid-900.eot                        \
    seshat/web/resources/static/fonts/fa-solid-900.ttf                        \
    seshat/web/resources/static/fonts/fa-solid-900.woff                       \
    seshat/web/resources/static/fonts/fa-solid-900.woff2                      \
    seshat/web/resources/static/fonts/FiraCode-Regular.woff2                  \
    seshat/web/resources/static/fonts/SourceSansPro-Bold.ttf                  \
    seshat/web/resources/static/fonts/SourceSansPro-Italic.ttf                \
    seshat/web/resources/static/fonts/SourceSansPro-Regular.ttf               \
    seshat/web/resources/static/images/codeworks-badge.svg                    \
    seshat/web/resources/static/images/collection-thumb.svg                   \
    seshat/web/resources/static/images/dataset-thumb.svg                      \
    seshat/web/resources/static/images/datatables/sort_asc.png                \
    seshat/web/resources/static/images/datatables/sort_asc_disabled.png       \
    seshat/web/resources/static/images/datatables/sort_both.png               \
    seshat/web/resources/static/images/datatables/sort_desc.png               \
    seshat/web/resources/static/images/datatables/sort_desc_disabled.png      \
    seshat/web/resources/static/images/ext-link.png                           \
    seshat/web/resources/static/images/handle-logo.png                        \
    seshat/web/resources/static/images/logo.png                               \
    seshat/web/resources/static/images/logo.svg                               \
    seshat/web/resources/static/images/orcid.svg                              \
    seshat/web/resources/static/js/ace/ace.js                                 \
    seshat/web/resources/static/js/ace/ext-language_tools.js                  \
    seshat/web/resources/static/js/ace/ext-searchbox.js                       \
    seshat/web/resources/static/js/ace/mode-sparql.js                         \
    seshat/web/resources/static/js/ace/theme-crimson_editor.js                \
    seshat/web/resources/static/js/admin-dashboard.js                         \
    seshat/web/resources/static/js/d3.v7.min.js                               \
    seshat/web/resources/static/js/depositor-dashboard.js                     \
    seshat/web/resources/static/js/dropzone.min.js                            \
    seshat/web/resources/static/js/edit-collection.js                         \
    seshat/web/resources/static/js/edit-dataset.js                            \
    seshat/web/resources/static/js/edit-profile.js                            \
    seshat/web/resources/static/js/exploratory.js                             \
    seshat/web/resources/static/js/jquery.dataTables.min.js                   \
    seshat/web/resources/static/js/jquery-3.6.0.min.js                        \
    seshat/web/resources/static/js/landing_page.js                            \
    seshat/web/resources/static/js/my-data.js                                 \
    seshat/web/resources/static/js/query-editor.js                            \
    seshat/web/resources/static/js/quill.min.js                               \
    seshat/web/resources/static/js/review-overview.js                         \
    seshat/web/resources/static/js/ranking.js                                 \
    seshat/web/resources/static/js/utils.js

EXTRA_DIST      = $(PYTHON_FILES) $(EXTRA_RESOURCES)
